@@ -16,20 +16,13 @@
  */
 package org.apache.tika.detect;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 
-import java.io.BufferedInputStream;
-import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
 
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -37,10 +30,14 @@ import org.apache.tika.config.Field;
 import org.apache.tika.io.BoundedInputStream;
 import org.apache.tika.io.TemporaryResources;
 import org.apache.tika.io.TikaInputStream;
+import org.apache.tika.metadata.ExternalProcess;
 import org.apache.tika.metadata.Metadata;
+import org.apache.tika.metadata.Property;
 import org.apache.tika.mime.MediaType;
 import org.apache.tika.parser.external.ExternalParser;
+import org.apache.tika.utils.FileProcessResult;
 import org.apache.tika.utils.ProcessUtils;
+import org.apache.tika.utils.StringUtils;
 
 /**
  * This runs the linux 'file' command against a file.  If
@@ -51,12 +48,18 @@ import org.apache.tika.utils.ProcessUtils;
  * up to {@link #maxBytes} to disk and then run the detector.
  * <p>
  * As with all detectors, mark must be supported.
+ * <p>
+ * If you want to use file's mime type in the parse, e.g.
+ * to select the parser in AutoDetectParser, set {@link FileCommandDetector#setUseMime(boolean)}
+ * to true.  The default behavior is to store the value as {@link FileCommandDetector#FILE_MIME}
+ * but rely on other detectors for the "active" mime used by Tika.
  */
 public class FileCommandDetector implements Detector {
 
     //TODO: file has some diff mimes names for some very common mimes
     //should we map file mimes to Tika mimes, e.g. text/xml -> application/xml??
 
+    public static Property FILE_MIME = Property.externalText("file:mime");
     private static final Logger LOGGER = LoggerFactory.getLogger(FileCommandDetector.class);
     private static final long DEFAULT_TIMEOUT_MS = 6000;
     private static final String DEFAULT_FILE_COMMAND_PATH = "file";
@@ -65,6 +68,8 @@ public class FileCommandDetector implements Detector {
     private String fileCommandPath = DEFAULT_FILE_COMMAND_PATH;
     private int maxBytes = 1_000_000;
     private long timeoutMs = DEFAULT_TIMEOUT_MS;
+
+    private boolean useMime = false;
 
     public static boolean checkHasFile() {
         return checkHasFile(DEFAULT_FILE_COMMAND_PATH);
@@ -98,58 +103,48 @@ public class FileCommandDetector implements Detector {
         if (tis != null) {
             //spool the full file to disk, if called with a TikaInputStream
             //and there is no underlying file
-            return detectOnPath(tis.getPath());
+            return detectOnPath(tis.getPath(), metadata);
         }
 
         input.mark(maxBytes);
         try (TemporaryResources tmp = new TemporaryResources()) {
             Path tmpFile = tmp.createTempFile();
             Files.copy(new BoundedInputStream(maxBytes, input), tmpFile, REPLACE_EXISTING);
-            return detectOnPath(tmpFile);
+            return detectOnPath(tmpFile, metadata);
         } finally {
             input.reset();
         }
     }
 
-    private MediaType detectOnPath(Path path) throws IOException {
+    private MediaType detectOnPath(Path path, Metadata metadata) throws IOException {
 
         String[] args =
                 new String[]{ProcessUtils.escapeCommandLine(fileCommandPath), "-b", "--mime-type",
                         ProcessUtils.escapeCommandLine(path.toAbsolutePath().toString())};
         ProcessBuilder builder = new ProcessBuilder(args);
-        Process process = builder.start();
-        StringStreamGobbler errorGobbler = new StringStreamGobbler(process.getErrorStream());
-        StringStreamGobbler outGobbler = new StringStreamGobbler(process.getInputStream());
-        Thread errorThread = new Thread(errorGobbler);
-        Thread outThread = new Thread(outGobbler);
-        errorThread.start();
-        outThread.start();
-
-        process.getErrorStream();
-        process.getInputStream();
-
-        boolean finished = false;
-        try {
-            finished = process.waitFor(timeoutMs, TimeUnit.MILLISECONDS);
-            if (!finished) {
-                process.destroyForcibly();
-                throw new IOException(new TimeoutException("timed out"));
-            }
-            int exitValue = process.exitValue();
-            if (exitValue != 0) {
-                throw new IOException(new RuntimeException("bad exit value"));
-            }
-            errorThread.join();
-            outThread.join();
-        } catch (InterruptedException e) {
-            //swallow
-        }
-        MediaType mt = MediaType.parse(outGobbler.toString().trim());
-        if (mt == null) {
+        FileProcessResult result = ProcessUtils.execute(builder, timeoutMs, 10000, 10000);
+        if (result.isTimeout()) {
+            metadata.set(ExternalProcess.IS_TIMEOUT, true);
             return MediaType.OCTET_STREAM;
-        } else {
-            return mt;
         }
+        if (result.getExitValue() != 0) {
+            metadata.set(ExternalProcess.EXIT_VALUE, result.getExitValue());
+            return MediaType.OCTET_STREAM;
+        }
+        String mimeString = result.getStdout();
+        if (StringUtils.isBlank(mimeString)) {
+            return MediaType.OCTET_STREAM;
+        }
+        metadata.set(FILE_MIME, mimeString);
+        if (useMime) {
+            MediaType mt = MediaType.parse(mimeString);
+            if (mt == null) {
+                return MediaType.OCTET_STREAM;
+            } else {
+                return mt;
+            }
+        }
+        return MediaType.OCTET_STREAM;
     }
 
     @Field
@@ -160,6 +155,14 @@ public class FileCommandDetector implements Detector {
         checkHasFile(this.fileCommandPath);
     }
 
+    @Field
+    public void setUseMime(boolean useMime) {
+        this.useMime = useMime;
+    }
+
+    public boolean isUseMime() {
+        return useMime;
+    }
     /**
      * If this is not called on a TikaInputStream, this detector
      * will spool up to this many bytes to a file to be detected
@@ -177,38 +180,4 @@ public class FileCommandDetector implements Detector {
         this.timeoutMs = timeoutMs;
     }
 
-    private static class StringStreamGobbler implements Runnable {
-
-        //plagiarized from org.apache.oodt's StreamGobbler
-        private final BufferedReader reader;
-        private final StringBuilder sb = new StringBuilder();
-
-        public StringStreamGobbler(InputStream is) {
-            this.reader =
-                    new BufferedReader(new InputStreamReader(new BufferedInputStream(is), UTF_8));
-        }
-
-        @Override
-        public void run() {
-            String line = null;
-            try {
-                while ((line = reader.readLine()) != null) {
-                    sb.append(line);
-                    sb.append("\n");
-                }
-            } catch (IOException e) {
-                //swallow ioe
-            }
-        }
-
-        public void stopGobblingAndDie() {
-            IOUtils.closeQuietly(reader);
-        }
-
-        @Override
-        public String toString() {
-            return sb.toString();
-        }
-
-    }
 }
