@@ -1,5 +1,8 @@
 Release 2.5.1 - ???
 
+   * The FileCommandDetector has been refactored to have the same
+     behavior as the Siegfried detector; see setUseMime in the javadoc (TIKA-3902).
+
    * Fix bug in OpenSearch emitter that prevented upserts on
      documents with embedded files (TIKA-3882).
 
